--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.1.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "next": "13.5.6",
     "next-pwa": "^5.6.0",
