--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
-    "next": "13.5.6",
+    "next": "^15.4.6",
     "next-pwa": "^5.6.0",
     "postcss": "^8.5.6",
     "react": "18.3.1",
@@ -33,8 +33,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "13.5.6",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.4.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
