--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.33.0",
-    "eslint-config-next": "^15.4.6",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "13.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
