--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "next": "^15.4.6",
@@ -33,8 +34,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-  "eslint": "^9.0.0",
-  "eslint-config-next": "15.4.6",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "15.4.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
