--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
+    "@stripe/react-stripe-js": "^3.9.1",
+    "@stripe/stripe-js": "^7.8.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
-    "framer-motion": "^12.23.12", 
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "next": "^15.4.6",
     "next-pwa": "^5.6.0",
     "postcss": "^8.5.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
