--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^9.0.0",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
