--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
-    "next": "^15.4.6",
+    "next": "^14.2.5",
     "next-pwa": "^5.6.0",
     "postcss": "^8.5.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sharp": "^0.34.3",
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1"
