--- a/env.example
+++ b/env.example
@@ -19,3 +19,15 @@ FIREBASE_ADMIN_TOKEN_URI=https://oauth2.googleapis.com/token
 FIREBASE_ADMIN_AUTH_PROVIDER_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 FIREBASE_ADMIN_CLIENT_CERT_URL=https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-fbsvc%40held-62986.iam.gserviceaccount.com
 FIREBASE_ADMIN_UNIVERSE_DOMAIN=googleapis.com
+
+# Polygon / Anchoring
+# RPC endpoint for Polygon mainnet (or testnet during dev)
+POLYGON_RPC=https://polygon-rpc.com
+# Server-side private key used to sign anchor() transactions
+# DO NOT expose to client; keep only in server env (.env.local)
+PRIVATE_KEY=replace_with_private_key_hex
+ANCHOR_ADMIN_TOKEN=replace_with_random_admin_token
+
+# Optional vendor RPC keys for higher reliability
+ALCHEMY_API_KEY=your_alchemy_key
+INFURA_PROJECT_ID=your_infura_project_id
