--- a/env.example
+++ b/env.example
@@ -31,3 +31,10 @@ ANCHOR_ADMIN_TOKEN=replace_with_random_admin_token
 # Optional vendor RPC keys for higher reliability
 ALCHEMY_API_KEY=your_alchemy_key
 INFURA_PROJECT_ID=your_infura_project_id
+
+# Optional: limit log/event scans to reduce RPC load
+# Set to the block the HeldAnchors contract was deployed
+HELD_ANCHORS_FROM_BLOCK=0
+
+# Optional: enable provider debug logging
+POLYGON_DEBUG=0
