Add Azure Vision API integration for AI image analysis
- Add analyze-image API endpoint with environment variable configuration
- Add setup script for Azure Vision environment variables
- Update env.example with Azure Vision configuration template
- Update README with Azure Vision setup instructions
- Implement secure credential handling (no hardcoded secrets)

--- a/env.example
+++ b/env.example
@@ -38,3 +38,8 @@ HELD_ANCHORS_FROM_BLOCK=0
 
 # Optional: enable provider debug logging
 POLYGON_DEBUG=0
+
+# Azure Vision API Configuration
+# Get these from your Azure Cognitive Services Computer Vision resource
+AZURE_VISION_ENDPOINT=https://your-vision-resource.cognitiveservices.azure.com/
+AZURE_VISION_SUBSCRIPTION_KEY=your_azure_vision_subscription_key_here
