--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^18.3.1",
     "sharp": "^0.34.3",
     "stripe": "^18.4.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
