--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -51,5 +51,21 @@
 	<false/>
 	<key>KeyboardDisplayRequiresUserAction</key>
 	<false/>
+	<key>UIWebViewDisallowOverscroll</key>
+	<true/>
+	<key>UIWebViewBounce</key>
+	<false/>
+	<key>UIScrollViewBounces</key>
+	<false/>
+	<key>UIWebViewAllowsInlineMediaPlayback</key>
+	<true/>
+	<key>UIWebViewMediaPlaybackRequiresUserAction</key>
+	<false/>
+	<key>UIWebViewAllowsAirPlay</key>
+	<false/>
+	<key>UIWebViewAllowsPictureInPictureMediaPlayback</key>
+	<false/>
+	<key>UIWebViewDataDetectorTypes</key>
+	<string>UIDataDetectorTypeNone</string>
 </dict>
 </plist>
