Add Firebase dependencies and custom native plugin for iOS fixes

--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -17,7 +17,13 @@ end
 
 target 'App' do
   capacitor_pods
-  # Add your Pods here
+  
+  # Firebase pods
+  pod 'Firebase/Analytics'
+  pod 'Firebase/Auth'
+  pod 'Firebase/Database'
+  pod 'Firebase/Storage'
+  pod 'Firebase/Firestore'
 end
 
 post_install do |installer|
