--- a/env.example
+++ b/env.example
@@ -2,6 +2,8 @@
 # Get these values from your Firebase project settings
 NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key_here
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_AUTH_PROXY_DOMAIN=your_project_id.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_AUTH_LOCAL_DOMAIN=your_project_id.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
@@ -19,6 +21,15 @@ FIREBASE_ADMIN_TOKEN_URI=https://oauth2.googleapis.com/token
 FIREBASE_ADMIN_AUTH_PROVIDER_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 FIREBASE_ADMIN_CLIENT_CERT_URL=https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-fbsvc%40held-62986.iam.gserviceaccount.com
 FIREBASE_ADMIN_UNIVERSE_DOMAIN=googleapis.com
+
+# When using a custom auth domain (e.g. myheld.link) in production,
+# leave the public values above pointing at that domain and set these
+# server-side mirrors accordingly. For local development you can keep
+# them on the default firebaseapp.com host so Google OAuth continues
+# to load helper scripts from Firebase.
+FIREBASE_AUTH_DOMAIN=your-custom-domain.example
+FIREBASE_AUTH_PROXY_DOMAIN=your_project_id.firebaseapp.com
+FIREBASE_AUTH_LOCAL_DOMAIN=your_project_id.firebaseapp.com
 
 # Polygon / Anchoring
 # RPC endpoint for Polygon mainnet (or testnet during dev)
