--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.5.3",
     "sharp": "^0.34.3",
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1",
@@ -46,8 +47,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "15.4.6",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.5",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
