--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -11,8 +11,10 @@ install! 'cocoapods', :disable_input_output_paths => true
 def capacitor_pods
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
+  pod 'CapacitorBrowser', :path => '../../node_modules/@capacitor/browser'
   pod 'CapacitorKeyboard', :path => '../../node_modules/@capacitor/keyboard'
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
+  pod 'SquareetlabsCapacitorSubscriptions', :path => '../../node_modules/@squareetlabs/capacitor-subscriptions'
 end
 
 target 'App' do
