--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@capacitor/ios": "^7.4.3",
     "@capacitor/keyboard": "^7.0.3",
     "@capacitor/status-bar": "^7.0.3",
-    "@codetrix-studio/capacitor-google-auth": "^3.4.1",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@google-cloud/storage": "^7.17.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
